2006-02-04  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Fixes for Cygwin. Look for dlfcn.h and an option -ldl to
	decide whether dynamic loading of libraries is possible, as Cygwin
	doesn't need and doesn't support -ldl. Fixed test for native Windows
	backend. Fixed CR/LF vs. LF issue in configure.

2006-02-03  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, configure.ac src/al_source.c: Renamed LINUX_AL to
	AL_SUPPORT_BYTE_LOKI_SOURCE_ATTR_, which is a bit clearer.

	* src/al_source.c, src/al_types.h, test/testloop.c: Removed the
	AL_STREAMING source attribute. It was non-standard, undocumented and
	didn't do anything.

	* configure.ac: Use AC_DEFINE instead of specifying preprocessor defines
	by hand.

2006-01-31  Prakash Punnoor <prakash@punnoor.de>

	* admin/pkgconfig/Makefile.am: use more portable way of defining
	pkgconfdir (by Andreas Bierfert)
	
	* common/include/AL/al.h, common/include/AL/alc.h, CMakeLists.txt,
	configure.ac: use visibility attribute only when building OpenAL lib
	
2006-01-23  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c (_alcSetContext, _alcInitContext): Initialize
	speaker positions when the number of speakers is known, not earlier...

	* src/alc/alc_context.c (_alcSetContext): Fixed debug message.

	* src/al_rcvar.c (rc_lookup): Don't complain a second time,
	_alGlobalBinding already did it.

2006-01-20  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.c: Fixed braino in alGetEnumValue.

2006-01-20  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/FindCompilerVisibility.cmake: fix result always set
	to true and include debugging output; minor indenting
	
	* admin/CMakeModules/FindPkgConfig.cmake: filter out ENTER lines
	
	* CMakeLists.txt: better defines handling and more debugging output;
	re-check back-end if its DLOPEN state changed; factor out code
	
	* admin/CMakeModules/FindConfigHelper.cmake: added
	
	* admin/CMakeModules/FindCompilerFlagsSet.cmake: added
