@@ -244,25 +244,27 @@ ENDIF(DEBUG)
 
 # library stuff
 CHECK_LIBRARY_EXISTS("m" "sin" "" HAVE_LIB_M)
-
-IF(NOT CMAKE_SYSTEM MATCHES "Darwin")
-  IF(NOT HAVE_LIB_M)
-    MESSAGE(FATAL_ERROR "libm not found.")
-  ENDIF(NOT HAVE_LIB_M)
-
-  CHECK_LIBRARY_EXISTS("dl" "dlopen" "" HAVE_LIB_DL)
-ENDIF(NOT CMAKE_SYSTEM MATCHES "Darwin")
-
-IF(HAVE_LIB_DL)
-  SET(ADD_LIBS ${ADD_LIBS} dl)
-ELSE(HAVE_LIB_DL)
-
-  ADD_DEFINE(NODLOPEN)
-ENDIF(HAVE_LIB_DL)
-
 IF(HAVE_LIB_M)
   SET(ADD_LIBS ${ADD_LIBS} m)
+ELSE(HAVE_LIB_M)
+
+  IF(NOT CMAKE_SYSTEM MATCHES "Darwin")
+    MESSAGE(FATAL_ERROR "libm not found.")
+  ENDIF(NOT CMAKE_SYSTEM MATCHES "Darwin")
 ENDIF(HAVE_LIB_M)
+
+
+CHECK_INCLUDE_FILE("dlfcn.h" HAVE_DL)
+IF(HAVE_DL)
+  CHECK_LIBRARY_EXISTS("dl" "dlopen" "" HAVE_LIB_DL)
+  IF(HAVE_LIB_DL)
+    SET(ADD_LIBS ${ADD_LIBS} dl)
+  ENDIF(HAVE_LIB_DL)
+ELSE(HAVE_DL)
+
+  ADD_DEFINE(NODLOPEN)
+  MESSAGE("Dynamic loading of libraries is not available.")
+ENDIF(HAVE_DL)
 
 
 # Special OS objs for target systems
@@ -378,9 +380,9 @@ int main(){return 0;}
               "Source file was:\n${SOURCE}\n" APPEND)
 
   IF(HAVE_BACKEND_HEADER)
-    IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+    IF(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
       SET(${BACKEND_OPTION}_FOUND "1${${BACKEND_OPTION}_DLOPEN}" CACHE INTERNAL "")
-    ELSE(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+    ELSE(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
 
       IF(${BACKEND_OPTION}_LIBS MATCHES "^$")
         FIND_LIBRARY(${BACKEND_OPTION}_LIBS NAMES ${BACKEND_LIB} PATHS /usr/lib /usr/local/lib)
@@ -418,7 +420,7 @@ int main(){return 0;}
           MESSAGE(STATUS "${BACKEND_OPTION} doesn't link.")
         ENDIF(BACKEND_LINKS)
       ENDIF(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
-    ENDIF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+    ENDIF(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
   ELSE(HAVE_BACKEND_HEADER)
 
     MESSAGE(STATUS "${BACKEND_OPTION} header ${BACKEND_HEADER} not found.")
@@ -434,15 +436,15 @@ IF(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_D
 
   ADD_DEFINITIONS(${${BACKEND_OPTION}_DEFINES})
 
-  IF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+  IF(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
     ADD_DEFINE(OPENAL_DLOPEN_${BACKEND_OPTION})
     MESSAGE(STATUS "${BACKEND_OPTION} support - dynamic")
-  ELSE(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+  ELSE(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
 
     SET(ADD_LIBS ${ADD_LIBS} ${${BACKEND_OPTION}_LIBS})
     LINK_DIRECTORIES(${${BACKEND_OPTION}_LINK_DIRS})
     MESSAGE(STATUS "${BACKEND_OPTION} support - static")
-  ENDIF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
+  ENDIF(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
 ELSE(${BACKEND_OPTION} AND ${BACKEND_OPTION}_FOUND MATCHES "1${${BACKEND_OPTION}_DLOPEN}")
 
   MESSAGE(STATUS "${BACKEND_OPTION} support - disabled")
